# cpp files, this list is maintained manually

set(OREAnalytics_SRC aggregation/collateralaccount.cpp
aggregation/collatexposurehelper.cpp
aggregation/creditmigrationcalculator.cpp
aggregation/creditmigrationhelper.cpp
aggregation/creditsimulationparameters.cpp
aggregation/cvaspreadsensitivitycalculator.cpp
aggregation/dimcalculator.cpp
aggregation/dimflatcalculator.cpp
aggregation/dimregressioncalculator.cpp
aggregation/dynamiccreditxvacalculator.cpp
aggregation/exposureallocator.cpp
aggregation/exposurecalculator.cpp
aggregation/nettedexposurecalculator.cpp
aggregation/postprocess.cpp
aggregation/staticcreditxvacalculator.cpp
aggregation/xvacalculator.cpp
app/analytic.cpp
app/analytics/analyticfactory.cpp
app/analytics/imscheduleanalytic.cpp
app/analytics/parconversionanalytic.cpp
app/analytics/parstressconversionanalytic.cpp
app/analytics/pnlanalytic.cpp
app/analytics/pnlexplainanalytic.cpp
app/analytics/pricinganalytic.cpp
app/analytics/scenarioanalytic.cpp
app/analytics/scenariostatisticsanalytic.cpp
app/analytics/simmanalytic.cpp
app/analytics/stresstestanalytic.cpp
app/analytics/varanalytic.cpp
app/analytics/xvaanalytic.cpp
app/analytics/xvasensitivityanalytic.cpp
app/analytics/xvastressanalytic.cpp
app/analytics/zerotoparshiftanalytic.cpp
app/analyticsmanager.cpp
app/cleanupsingletons.cpp
app/initbuilders.cpp
app/inputparameters.cpp
app/marketcalibrationreport.cpp
app/marketdatacsvloader.cpp
app/marketdatainmemoryloader.cpp
app/marketdataloader.cpp
app/oreapp.cpp
app/parameters.cpp
app/reportwriter.cpp
app/sensitivityrunner.cpp
app/xvarunner.cpp
app/zerosensitivityloader.cpp
cube/cube_io.cpp
cube/cubecsvreader.cpp
cube/cubeinterpretation.cpp
cube/cubewriter.cpp
cube/jointnpvcube.cpp
cube/jointnpvsensicube.cpp
cube/sensitivitycube.cpp
cube/sparsenpvcube.cpp
engine/amcvaluationengine.cpp
engine/bufferedsensitivitystream.cpp
engine/cptycalculator.cpp
engine/decomposedsensitivitystream.cpp
engine/filteredsensitivitystream.cpp
engine/historicalpnlgenerator.cpp
engine/historicalsensipnlcalculator.cpp
engine/historicalsimulationvar.cpp
engine/marketriskbacktest.cpp
engine/marketriskreport.cpp
engine/mporcalculator.cpp
engine/multistatenpvcalculator.cpp
engine/multithreadedvaluationengine.cpp
engine/npvrecord.cpp
engine/parametricvar.cpp
engine/parsensitivityanalysis.cpp
engine/parsensitivitycubestream.cpp
engine/parsensitivityinstrumentbuilder.cpp
engine/parsensitivityutilities.cpp
engine/parstressconverter.cpp
engine/parstressscenarioconverter.cpp
engine/pnlexplainreport.cpp
engine/riskfilter.cpp
engine/sensitivityaggregator.cpp
engine/sensitivityanalysis.cpp
engine/sensitivitycubestream.cpp
engine/sensitivityfilestream.cpp
engine/sensitivityinmemorystream.cpp
engine/sensitivityrecord.cpp
engine/sensitivityreportstream.cpp
engine/stresstest.cpp
engine/valuationcalculator.cpp
engine/valuationengine.cpp
engine/varbacktest.cpp
engine/varcalculator.cpp
engine/xvaenginecg.cpp
engine/zerotoparcube.cpp
engine/zerotoparshift.cpp
scenario/clonedscenariogenerator.cpp
scenario/clonescenariofactory.cpp
scenario/crossassetmodelscenariogenerator.cpp
scenario/csvscenariogenerator.cpp
scenario/deltascenario.cpp
scenario/deltascenariofactory.cpp
scenario/historicalscenariofilereader.cpp
scenario/historicalscenariogenerator.cpp
scenario/historicalscenarioloader.cpp
scenario/lgmscenariogenerator.cpp
scenario/scenario.cpp
scenario/scenariogeneratorbuilder.cpp
scenario/scenariogeneratordata.cpp
scenario/scenariogeneratortransform.cpp
scenario/scenarioshiftcalculator.cpp
scenario/scenariosimmarket.cpp
scenario/scenariosimmarketparameters.cpp
scenario/scenarioutilities.cpp
scenario/scenariowriter.cpp
scenario/sensitivityscenariodata.cpp
scenario/sensitivityscenariogenerator.cpp
scenario/shiftscenariogenerator.cpp
scenario/simplescenario.cpp
scenario/stressscenariodata.cpp
scenario/stressscenariogenerator.cpp
simm/crif.cpp
simm/crifconfiguration.cpp
simm/crifloader.cpp
simm/crifrecord.cpp
simm/imschedulecalculator.cpp
simm/imscheduleresults.cpp
simm/simmbasicnamemapper.cpp
simm/simmbucketmapperbase.cpp
simm/simmcalculator.cpp
simm/simmcalibration.cpp
simm/simmconcentration.cpp
simm/simmconcentrationcalibration.cpp
simm/simmconcentrationisdav1_3.cpp
simm/simmconcentrationisdav1_3_38.cpp
simm/simmconcentrationisdav2_0.cpp
simm/simmconcentrationisdav2_1.cpp
simm/simmconcentrationisdav2_2.cpp
simm/simmconcentrationisdav2_3.cpp
simm/simmconcentrationisdav2_3_8.cpp
simm/simmconcentrationisdav2_5.cpp
simm/simmconcentrationisdav2_5a.cpp
simm/simmconcentrationisdav2_6.cpp
simm/simmconfiguration.cpp
simm/simmconfigurationbase.cpp
simm/simmconfigurationcalibration.cpp
simm/simmconfigurationisdav1_0.cpp
simm/simmconfigurationisdav1_3.cpp
simm/simmconfigurationisdav1_3_38.cpp
simm/simmconfigurationisdav2_0.cpp
simm/simmconfigurationisdav2_1.cpp
simm/simmconfigurationisdav2_2.cpp
simm/simmconfigurationisdav2_3.cpp
simm/simmconfigurationisdav2_3_8.cpp
simm/simmconfigurationisdav2_5.cpp
simm/simmconfigurationisdav2_5a.cpp
simm/simmconfigurationisdav2_6.cpp
simm/simmresults.cpp
simm/utilities.cpp
simulation/fixingmanager.cpp
simulation/simmarket.cpp)

# hpp files, this list is maintained manually

set(OREAnalytics_HDR aggregation/collateralaccount.hpp
aggregation/collatexposurehelper.hpp
aggregation/creditmigrationcalculator.hpp
aggregation/creditmigrationhelper.hpp
aggregation/creditsimulationparameters.hpp
aggregation/cvaspreadsensitivitycalculator.hpp
aggregation/dimcalculator.hpp
aggregation/dimflatcalculator.hpp
aggregation/dimregressioncalculator.hpp
aggregation/dynamiccreditxvacalculator.hpp
aggregation/exposureallocator.hpp
aggregation/exposurecalculator.hpp
aggregation/nettedexposurecalculator.hpp
aggregation/postprocess.hpp
aggregation/staticcreditxvacalculator.hpp
aggregation/xvacalculator.hpp
app/analytic.hpp
app/analytics/analyticfactory.hpp
app/analytics/imscheduleanalytic.hpp
app/analytics/parconversionanalytic.hpp
app/analytics/parstressconversionanalytic.hpp
app/analytics/pnlanalytic.hpp
app/analytics/pnlexplainanalytic.hpp
app/analytics/pricinganalytic.hpp
app/analytics/scenarioanalytic.hpp
app/analytics/scenariostatisticsanalytic.hpp
app/analytics/simmanalytic.hpp
app/analytics/stresstestanalytic.hpp
app/analytics/varanalytic.hpp
app/analytics/xvaanalytic.hpp
app/analytics/xvasensitivityanalytic.hpp
app/analytics/xvastressanalytic.hpp
app/analytics/zerotoparshiftanalytic.hpp
app/analyticsmanager.hpp
app/cleanupsingletons.hpp
app/initbuilders.hpp
app/inputparameters.hpp
app/marketcalibrationreport.hpp
app/marketdatacsvloader.hpp
app/marketdatainmemoryloader.hpp
app/marketdataloader.hpp
app/oreapp.hpp
app/parameters.hpp
app/reportwriter.hpp
app/sensitivityrunner.hpp
app/structuredanalyticserror.hpp
app/structuredanalyticswarning.hpp
app/xvarunner.hpp
app/zerosensitivityloader.hpp
auto_link.hpp
cube/cube_io.hpp
cube/cubecsvreader.hpp
cube/cubeinterpretation.hpp
cube/cubewriter.hpp
cube/inmemorycube.hpp
cube/jaggedcube.hpp
cube/jointnpvcube.hpp
cube/jointnpvsensicube.hpp
cube/npvcube.hpp
cube/npvsensicube.hpp
cube/sensicube.hpp
cube/sensitivitycube.hpp
cube/sparsenpvcube.hpp
engine/amcvaluationengine.hpp
engine/bufferedsensitivitystream.hpp
engine/cptycalculator.hpp
engine/decomposedsensitivitystream.hpp
engine/filteredsensitivitystream.hpp
engine/historicalpnlgenerator.hpp
engine/historicalsensipnlcalculator.hpp
engine/historicalsimulationvar.hpp
engine/marketriskbacktest.hpp
engine/marketriskreport.hpp
engine/mporcalculator.hpp
engine/multistatenpvcalculator.hpp
engine/multithreadedvaluationengine.hpp
engine/npvrecord.hpp
engine/observationmode.hpp
engine/parametricvar.hpp
engine/parsensitivityanalysis.hpp
engine/parsensitivitycubestream.hpp
engine/parsensitivityinstrumentbuilder.hpp
engine/parsensitivityutilities.hpp
engine/parstressconverter.hpp
engine/parstressscenarioconverter.hpp
engine/pnlexplainreport.hpp
engine/riskfilter.hpp
engine/sensitivityaggregator.hpp
engine/sensitivityanalysis.hpp
engine/sensitivitycubestream.hpp
engine/sensitivityfilestream.hpp
engine/sensitivityinmemorystream.hpp
engine/sensitivityrecord.hpp
engine/sensitivityreportstream.hpp
engine/sensitivitystream.hpp
engine/stresstest.hpp
engine/valuationcalculator.hpp
engine/valuationengine.hpp
engine/varbacktest.hpp
engine/varcalculator.hpp
engine/xvaenginecg.hpp
engine/zerotoparcube.hpp
engine/zerotoparshift.hpp
scenario/aggregationscenariodata.hpp
scenario/clonedscenariogenerator.hpp
scenario/clonescenariofactory.hpp
scenario/crossassetmodelscenariogenerator.hpp
scenario/csvscenariogenerator.hpp
scenario/deltascenario.hpp
scenario/deltascenariofactory.hpp
scenario/historicalscenariofilereader.hpp
scenario/historicalscenariogenerator.hpp
scenario/historicalscenarioloader.hpp
scenario/historicalscenarioreader.hpp
scenario/lgmscenariogenerator.hpp
scenario/scenario.hpp
scenario/scenariofactory.hpp
scenario/scenariofilter.hpp
scenario/scenariogenerator.hpp
scenario/scenariogeneratorbuilder.hpp
scenario/scenariogeneratordata.hpp
scenario/scenariogeneratortransform.hpp
scenario/scenarioshiftcalculator.hpp
scenario/scenariosimmarket.hpp
scenario/scenariosimmarketparameters.hpp
scenario/scenarioutilities.hpp
scenario/scenariowriter.hpp
scenario/sensitivityscenariodata.hpp
scenario/sensitivityscenariogenerator.hpp
scenario/shiftscenariogenerator.hpp
scenario/simplescenario.hpp
scenario/simplescenariofactory.hpp
scenario/stressscenariodata.hpp
scenario/stressscenariogenerator.hpp
simm/crif.hpp
simm/crifconfiguration.hpp
simm/crifloader.hpp
simm/crifrecord.hpp
simm/imschedulecalculator.hpp
simm/imscheduleresults.hpp
simm/simmbasicnamemapper.hpp
simm/simmbucketmapper.hpp
simm/simmbucketmapperbase.hpp
simm/simmcalculator.hpp
simm/simmcalibration.hpp
simm/simmconcentration.hpp
simm/simmconcentrationcalibration.hpp
simm/simmconcentrationisdav1_3.hpp
simm/simmconcentrationisdav1_3_38.hpp
simm/simmconcentrationisdav2_0.hpp
simm/simmconcentrationisdav2_1.hpp
simm/simmconcentrationisdav2_2.hpp
simm/simmconcentrationisdav2_3.hpp
simm/simmconcentrationisdav2_3_8.hpp
simm/simmconcentrationisdav2_5.hpp
simm/simmconcentrationisdav2_5a.hpp
simm/simmconcentrationisdav2_6.hpp
simm/simmconfiguration.hpp
simm/simmconfigurationbase.hpp
simm/simmconfigurationcalibration.hpp
simm/simmconfigurationisdav1_0.hpp
simm/simmconfigurationisdav1_3.hpp
simm/simmconfigurationisdav1_3_38.hpp
simm/simmconfigurationisdav2_0.hpp
simm/simmconfigurationisdav2_1.hpp
simm/simmconfigurationisdav2_2.hpp
simm/simmconfigurationisdav2_3.hpp
simm/simmconfigurationisdav2_3_8.hpp
simm/simmconfigurationisdav2_5.hpp
simm/simmconfigurationisdav2_5a.hpp
simm/simmconfigurationisdav2_6.hpp
simm/simmnamemapper.hpp
simm/simmresults.hpp
simm/utilities.hpp
simulation/fixingmanager.hpp
simulation/simmarket.hpp
version.hpp)

writeAll("orea" "orea.hpp" "auto_link.hpp" "${OREAnalytics_HDR}")
add_library(${OREA_LIB_NAME} ${OREAnalytics_SRC} "engine/pnlexplainreport.cpp")
target_link_libraries(${OREA_LIB_NAME} ${QL_LIB_NAME})
target_link_libraries(${OREA_LIB_NAME} ${QLE_LIB_NAME})
target_link_libraries(${OREA_LIB_NAME} ${ORED_LIB_NAME})
target_link_libraries(${OREA_LIB_NAME} ${Boost_LIBRARIES})
if(ORE_USE_ZLIB)
    target_link_libraries(${OREA_LIB_NAME} ${ZLIB_LIBRARIES})
    add_definitions(-DORE_USE_ZLIB)
endif()

if (QL_USE_PCH)
target_precompile_headers(${OREA_LIB_NAME}
  PUBLIC
    <orea/app/inputparameters.hpp>
    <orea/scenario/scenariosimmarketparameters.hpp>)
endif()

install(DIRECTORY . DESTINATION include/orea
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

install(TARGETS ${OREA_LIB_NAME}
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        )
